change key shortcut & add header footer on the side

--- a/src/index.html
+++ b/src/index.html
@@ -10,6 +10,12 @@
 </head>
 
 <body>
+  <header>
+    <div>DF</div>
+    <div>Settings</div>
+    <div>Location</div>
+    <div>Spectrum</div>
+  </header>
   <main>
     <iframe id="spectrum-webv" src=""></iframe>
     <div id="df-view">
@@ -141,6 +147,12 @@
     </div>
     </div>
   </main>
+  <footer>
+    <div>Refresh</div>
+    <div>UP</div>
+    <div>Down</div>
+    <div>OK</div>
+  </footer>
 </body>
 
 </html>
