enable click on side button

--- a/src/index.html
+++ b/src/index.html
@@ -11,10 +11,10 @@
 
 <body>
   <header>
-    <div><button disabled id="btn-show-df">DF</button></div>
-    <div><button disabled id="btn-show-setting">Settings</button></div>
-    <div><button disabled id="btn-show-location">Location</button></div>
-    <div><button disabled id="btn-show-spectrum">Spectrum</button></div>
+    <div><button id="btn-show-df">DF</button></div>
+    <div><button id="btn-show-setting">Settings</button></div>
+    <div><button id="btn-show-location">Location</button></div>
+    <div><button id="btn-show-spectrum">Spectrum</button></div>
   </header>
   <main>
     <div id="spectrum-container">
@@ -160,10 +160,10 @@
     </div>
   </main>
   <footer>
-    <div><button disabled id="btn-refresh-2">Refresh</button></div>
-    <div><button disabled id="btn-menu-up">UP</button></div>
-    <div><button disabled id="btn-menu-down">Down</button></div>
-    <div><button disabled id="btn-menu-ok">OK</button></div>
+    <div><button id="btn-refresh-side">Refresh</button></div>
+    <div><button id="btn-menu-up">UP</button></div>
+    <div><button id="btn-menu-down">Down</button></div>
+    <div><button id="btn-menu-ok">OK</button></div>
   </footer>
 </body>
 
